# Share-Game

./: .gitignore  README.md  pyproject.toml
src/othello/: __init__.py  app.py  board.py  config.py  constants.py  game_engine.py  game_enums.py  game_types.py  logger.py  main.py  merge_state_values.py  player_controller.py  players.py  render.py  rules.py  train.py
src/othello/core/: __init__.py  board.py  game_engine.py  game_enums.py  game_result.py  game_types.py  move_applier.py  move_simulator.py  player_color.py  rules.py  stone_counter.py
src/othello/modes/: __init__.py  client_mode.py  local_mode.py  remote_cpu_logging.py  remote_message_handler.py  remote_mode_base.py  server_mode.py
src/othello/network/: __init__.py  client.py  codec.py  commands.py  ip_validation.py  message.py  protocol.py  server.py  transport.py
src/othello/players/: __init__.py  cpu_player.py  local_human_player.py  player_controller.py  remote_human_player.py
src/othello/players/cpu/: __init__.py  corner_priority_strategy.py  (+8 more)
src/othello/training/: __init__.py  merge_cli.py  parallel_trainer.py  state_value_merger.py  training_shard.py  worker_runner.py
src/othello/ui/: __init__.py  button.py  learning_training_control.py  render.py  start_screen.py  start_screen_layout.py  text_renderer.py
tests/: test_cpu_player_and_ui.py  test_cpu_strategies.py  test_learning_strategy.py  test_parallel_training.py  test_protocol_compatibility.py  test_remote_cpu_match.py  test_rl_components.py  test_state_value_merger.py  test_tabular_state_value.py  test_tabular_training.py
(+10 files in other folders)
